load location name dynamically; offer create offersearch after adding vehicle;

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     -->
     <div id="locationSelection">
         <div class="selectionCompleted">
-            Ihre Werkstatt: <span>Aigner KFZ Service seit 1966</span>
+            Ihre Werkstatt: <span class="locationName"></span>
         </div>
     </div>
     <div id="vehicleSelection">
@@ -99,6 +99,9 @@
     <div id="offerComparison" style="display:none;">
         <div class="mask">
             Daten werden geladen
+        </div>
+        <div class="error">
+            Es ist ein Fehler aufgetreten.
         </div>
         <div class="template">
             <div class="offerSingle">
