improve error control of user/offersearches

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <div class="selectionCompleted">
             Ihre Werkstatt: <span class="locationName"></span>
         </div>
+        <div class="mask">
+            Daten werden geladen
+        </div>
     </div>
     <div id="vehicleSelection">
         <div class="selectFZA">
